test/descriptor/seman/poly_corr13.v3
//@seman = DescriptorError @ 3:23
class D1<T> describes A<T> { }
class D2<T> describes A<T> { }  // error: A<T> is already described by D1
class A<T> descriptor D1<T> { }
